<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f0f0f"
    tools:context=".activities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        tools:ignore="UnusedAttribute">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white_color"
            app:boxBackgroundColor="@color/white_color"
            app:boxStrokeColor="@color/white_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textEmailAddress"
                android:textColor="@color/white_color" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white_color"
            app:boxBackgroundColor="@color/white_color"
            app:boxStrokeColor="@color/white_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textColor="@color/white_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white_color"
            app:boxBackgroundColor="@color/white_color"
            app:boxStrokeColor="@color/white_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textColor="@color/white_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_field_style"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>